--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,14 +9,20 @@
     "dev": "nodemon --quiet server.js"
   },
   "dependencies": {
+    "@langchain/openai": "^1.0.0",
     "@mistralai/mistralai": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "chromadb": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^1.0.3",
     "morgan": "^1.10.1",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.3",
+    "openai": "^6.8.1",
+    "uuid": "^13.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
