added openai_api_key and openai_model fields

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -21,3 +21,5 @@ JWT_SECRET=CHANGE_ME
 # LLM
 # -----------------------------
 MISTRAL_API_KEY=CHANGE_ME
+OPENAI_API_KEY=CHANGE_ME
+OPENAI_MODEL=gpt-4o
